Move rest period down and add 'Rest Period:' label above it
- Added 'Rest Period:' label above the rest period time
- Moved the actual rest period time (2 minutes) to a line below the label
- Updated CSS styles to properly align and style the new layout
- Maintained symmetry with the rep scheme display on the left side

--- a/client/src/styles/LiftingClass.css
+++ b/client/src/styles/LiftingClass.css
@@ -31,6 +31,12 @@
   font-size: 1.1em;
 }
 
+.lifting-class-rest-label {
+  font-weight: bold;
+  font-size: 1.1em;
+  text-align: right;
+}
+
 .lifting-class-scheme-value {
   display: flex;
   justify-content: space-between;
